[project]
name = "comfyui_fl-clearvoice"
description = "FL ClearVoice - Audio enhancement nodes for ComfyUI. Features speech enhancement, super-resolution, denoising, and audio restoration using ClearVoice, Resemble-Enhance, and VoiceFixer models. Supports multiple backends with automatic model downloading."
version = "1.0.0"
license = "MIT"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "scipy>=1.10.0",
    "clearvoice",
    "huggingface_hub",
    "voicefixer",
    "resemble-enhance",
]

[project.urls]
Repository = "https://github.com/filliptm/ComfyUI_FL-ClearVoice"

[tool.comfy]
PublisherId = "machinedelusions"
DisplayName = "FL ClearVoice"
Icon = ""
